@@ -21,7 +21,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 ### 02111-1307, USA. 
 
-AC_REVISION($Revision: 1.349 $)
+AC_REVISION($Revision: 1.350 $)
 AC_PREREQ(2.9)
 AC_INIT(src/octave.cc)
 AC_CONFIG_HEADER(config.h)
@@ -543,7 +543,7 @@ EOF
   cat << \EOF > $f77_rules_frag
 
 %.c : %.f
-	cat $< | $(F2C) $(F2CFLAGS) > $(@F)
+	$(F2C) $(F2CFLAGS) < $< > $(@F)
 
 %.o : %.f
 
